--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Loginpage</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-  <div id="otpless-login-page"></div>
-  <script type="text/javascript" src="https://otpless.com/auth.js" ></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Loginpage</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <script
+      id="otpless-sdk"
+      type="text/javascript"
+      src="https://otpless.com/v2/auth.js"
+      data-appid="DTRR3GPNQQIY5VXN9K1T"
+    ></script>
+    <app-root></app-root>
+  </body>
 </html>
